cambios en el index

--- a/index.html
+++ b/index.html
@@ -76,8 +76,15 @@
                     <img class="fotoChica1" src="assets/editadas/foto3.jpg" alt=" Foto Helado Neon ">
                     <img class="fotoChica2" src="assets/editadas/foto4.jpg" alt=" Foto Imagen Neon ">
                     <img class="fotoChica3" src="assets/editadas/foto5.jpg" alt=" Foto Imagen Neon "
-            </div>
+                </div>
          </main>
+
+   
+
+          <!-- cambios test github -->
+        <div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias voluptatibus provident expedita ex delectus quod deserunt blanditiis aliquid magnam consectetur voluptate voluptates placeat, recusandae necessitatibus architecto quis, eius unde mollitia.</p>
+        </div>
         
         <div class="lorem">
             <p>
